--- a/style.css
+++ b/style.css
@@ -73,18 +73,33 @@ body {
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: left;
 }
 
-.main h3 {
+.main-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.main .main-container .details {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 700px;
+  background-color: aquamarine;
+  padding: 25px 50px;
+}
+
+.main .main-container .details h3 {
   margin-bottom: 10px;
 }
 
-.main p {
+.main .main-container .details p {
   margin-bottom: 10px;
 }
 
-.main .btn-resume {
+.main .main-container .details .btn-resume {
   background-color: #fff;
   color: #0d98ba;
   width: 120px;
@@ -98,26 +113,30 @@ body {
   cursor: pointer;
 }
 
-.main .btn-resume:hover {
+.main .main-container .details .btn-resume:hover {
   background-color: #0d98ba;
   color: #fff;
 }
 
-.main .preview {
+.main .main-container .preview {
   display: flex;
-  width: 100%;
+  width: 99%;
   height: 200px;
+  max-width: 1200px;
   cursor: pointer;
+  margin: 20px 0;
 }
 
-.main .preview .preview-skills,
-.main .preview .preview-projects,
-.main .preview .preview-contacts {
-  width: 30%;
+.main-container .preview .preview-skills,
+.main-container .preview .preview-projects,
+.main-container .preview .preview-contacts {
+  width: 33%;
   text-align: center;
   line-height: 200px;
+  background-color: aqua;
+  margin: 3px;
 }
 
-.main .preview .preview-skills:hover {
+.main-container .preview .preview-skills:hover {
   /* preview 이미지 및 밝이 어둡게 */
 }
