--- a/style.css
+++ b/style.css
@@ -196,6 +196,7 @@ body {
   color: blueviolet;
   font-size: 20px;
   cursor: pointer;
+  overflow: hidden;
 }
 
 .skill-card i {
@@ -205,6 +206,25 @@ body {
 .skill-card .fa-html5:hover {
   background-color: antiquewhite;
   color: #333;
+  box-shadow: 30px 10px 0 80px antiquewhite;
+}
+
+.skill-card .fa-css3:hover {
+  background-color: antiquewhite;
+  color: #333;
+  box-shadow: 0 10px 0 80px antiquewhite;
+}
+
+.skill-card .fa-js:hover {
+  background-color: antiquewhite;
+  color: #333;
+  box-shadow: 0 10px 0 80px antiquewhite;
+}
+
+.skill-card .fa-react:hover {
+  background-color: antiquewhite;
+  color: #333;
+  box-shadow: -30px 10px 0 80px antiquewhite;
 }
 
 /* Projects */
@@ -307,8 +327,8 @@ body {
   width: 100%;
   height: 100%;
   font-size: 50px;
-  margin: 10px;
   text-align: center;
+  margin: 0;
 }
 
 .contact-container .contact-links p {
