--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 
 .home h1 {
@@ -53,6 +54,12 @@ body {
 
 .home h3 {
   margin: 10px 0;
+}
+
+.home .fa-chevron-down {
+  font-size: 50px;
+  position: absolute;
+  bottom: 30px;
 }
 
 .home .btn-start {
@@ -239,7 +246,7 @@ body {
 }
 
 .projects-container .project-categories .category-btn {
-  width: 32%;
+  width: 23%;
   height: 40px;
   cursor: pointer;
   border: none;
@@ -248,6 +255,20 @@ body {
   font-size: 15px;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
+  position: relative;
+}
+
+.category-btn.selected,
+.category-btn:hover {
+  transform: scaleY(1.3) translateY(-5px);
+}
+
+.category-btn.selected::after,
+.category-btn:hover .category-btn::after {
+  content: "4";
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .projects-container .project-list {
@@ -264,7 +285,7 @@ body {
   font-size: 20px;
 }
 
-.projects-container .project-list .project-results {
+.projects-container .project-list .project-result {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -272,7 +293,57 @@ body {
   font-size: 50px;
 }
 
-.project-list .project-results img {
+.project-result .design-result {
+  position: relative;
+}
+
+.project-result .design-result .project-description {
+  /* description도 project 박스 안에서
+  자리를 차지하는 클래스 이기 때문에
+  마우스가 올라갔을 때 description이 전체적인 박스에
+  나타내려고 한다면
+  그 자리를 벗어나서 덮어져야 하므로
+  absolute로 해준다. */
+  position: absolute;
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  font-size: medium;
+  transform: translateY(10px);
+  transition: all 0.5s ease-in;
+}
+
+.design-result:hover .project-description {
+  transform: translateY(0px);
+  opacity: 0.8;
+}
+
+.project-description h3 {
+  color: orange;
+}
+
+.project-description h3:after {
+  content: "";
+  display: block;
+  position: relative;
+  left: 50%;
+  width: 25px;
+  height: 2px;
+  margin-left: -12px;
+  margin-top: 8px;
+  background-color: gray;
+  transform: translateX(-50%);
+}
+
+.project-list .project-result img {
   width: 200px;
   height: 270px;
   margin: 0 40px;
