--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
   padding: 50px;
   margin: auto;
   max-width: 1500px;
+  background-color: #eee;
 }
 
 .section h1 {
@@ -34,35 +35,48 @@ body {
 /* HOME */
 .section.home {
   max-width: none;
+  background-attachment: fixed;
 }
 
 .home {
+  width: 100%;
   height: 100vh;
   background-color: #008080;
   color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  inset: 0px;
+  z-index: -100;
+}
+
+.home .home-wrap {
+  height: 100vh;
   text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   position: relative;
+  background-attachment: fixed;
 }
 
-.home h1 {
+.home .home-wrap h1 {
   margin-bottom: 20px;
 }
 
-.home h3 {
+.home .home-wrap h3 {
   margin: 10px 0;
 }
 
-.home .fa-chevron-down {
+.home .home-wrap .fa-chevron-down {
   font-size: 50px;
   position: absolute;
   bottom: 30px;
 }
 
-.home .btn-start {
+.home .home-wrap .btn-start {
   border-top: 50px solid red;
   border-bottom: 50px solid none;
   border-right: 50px solid transparent;
@@ -73,11 +87,11 @@ body {
   cursor: pointer;
 }
 
-.home .btn-start:focus {
+.home .home-wrap .btn-start:focus {
   outline: none;
 }
 
-.home .line {
+.home .home-wrap .line {
   width: 300px;
 }
 
@@ -87,6 +101,8 @@ body {
   display: flex;
   flex-direction: column;
   height: 100vh;
+  /* parallax */
+  margin-top: 100vh;
 }
 
 .main h1 {
@@ -242,10 +258,14 @@ body {
 .projects-container {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  justify-content: center;
+  align-items: center;
 }
 
 .projects-container .project-categories {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
 }
 
@@ -260,6 +280,7 @@ body {
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
   position: relative;
+  margin: 15px 1.5px 0 1.5px;
 }
 
 .category-btn.selected,
@@ -375,7 +396,7 @@ body {
 
 .projects-container .project-list .project-result {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   width: 100%;
   font-size: 50px;
@@ -443,11 +464,22 @@ body {
 
 /* Contact */
 /* 명함이 탁 나오는 그런 애니메이션 구현? */
+.section.contact {
+  padding-bottom: 0;
+}
+
+.section.contact h1 {
+  margin-bottom: 0;
+}
+
 .contact-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: 500px;
+  margin: 0;
+  padding: 0;
 }
 
 .contact-container .contact-info {
@@ -456,9 +488,9 @@ body {
   width: 600px;
   height: 350px;
   border-radius: 10px;
-  margin-bottom: 50px;
   margin-top: 30px;
   position: relative;
+  padding: 15px;
 }
 
 .contact-container .contact-info h3 {
@@ -485,16 +517,18 @@ body {
   padding: 50px;
 }
 
-.contact-container .contact-links {
+.contact-links {
   background-color: #20b2aa;
   width: 100%;
   height: 100%;
-  font-size: 50px;
+  font-size: 35px;
   text-align: center;
   margin: 0;
+  padding-top: 50px;
+  padding-bottom: 10px;
 }
 
-.contact-container .contact-links p {
-  font-size: 15px;
+.contact-links p {
+  font-size: 14px;
   color: #333;
 }
