--- a/style.css
+++ b/style.css
@@ -154,28 +154,27 @@ image-container {
 .main {
   display: flex;
   flex-direction: column;
-  height: 100vh;
   /* parallax */
   margin-top: 100vh;
   /* image container absolute하기 위함 */
   position: relative;
 }
 
-.main .wrap {
-  height: 100vh;
-}
-
 .main h1 {
   height: 10vh;
+  margin-bottom: 0;
 }
 
 .main-container {
+  background-color: #e0ffff;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 80vh;
+  padding: 6px 3px;
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.15);
 }
 
 .main .main-container .details {
@@ -183,8 +182,7 @@ image-container {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 60%;
-  background-color: aquamarine;
+  height: 70%;
   padding: 50px 50px;
 }
 
@@ -193,10 +191,21 @@ image-container {
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
+  max-width: 500px;
 }
 
 .main .main-container .details h3 {
   margin-bottom: 10px;
+}
+
+.main .main-container .details .my-info li {
+  list-style-type: none;
+  margin-bottom: 5px;
+  letter-spacing: 1px;
+}
+
+.my-info li p {
+  line-height: 25px;
 }
 
 .main .main-container .details p {
@@ -215,6 +224,7 @@ image-container {
   letter-spacing: 1px;
   padding: 5px 10px;
   cursor: pointer;
+  transition: 0.4s ease;
 }
 
 .main .main-container .details .btn-resume:hover {
@@ -225,10 +235,9 @@ image-container {
 .main .main-container .preview {
   display: flex;
   width: 100%;
-  height: 40%;
+  height: 30%;
   /* 작아지면 height 30?으로 바꾸기?? */
   margin-top: 6px;
-  margin-bottom: 20px;
   justify-content: center;
   align-items: center;
 }
@@ -236,22 +245,113 @@ image-container {
 .main-container .preview .preview-skills,
 .main-container .preview .preview-projects,
 .main-container .preview .preview-contacts {
+  background-color: #afeeee;
+  border: 1.5px solid #0d98ba;
+  color: #0d98ba;
+  border-radius: 2px;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 33%;
   height: 100%;
   text-align: center;
-  background-color: aqua;
   margin: 3px;
   cursor: pointer;
+  position: relative;
 }
 
 .main-container .preview .preview-skills:hover,
 .main-container .preview .preview-projects:hover,
 .main-container .preview .preview-contacts:hover {
   /* preview 이미지 및 밝이 어둡게 */
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.main-container .preview .preview-skills .this,
+.main-container .preview .preview-projects .this,
+.main-container .preview .preview-contacts .this {
+  width: 100%;
+}
+
+.main-container .preview .preview-skills:hover .this,
+.main-container .preview .preview-projects:hover .this,
+.main-container .preview .preview-contacts:hover .this {
+  display: none;
+}
+
+.main-container .preview .preview-skills:hover .skillbox,
+.main-container .preview .preview-projects:hover .skillbox,
+.main-container .preview .preview-contacts:hover .skillbox {
+  opacity: 1;
+  transform: scale(1);
+}
+
+.skillbox {
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  left: 0;
+  transform: scale(0);
+  transition: all 0.5s ease-in-out;
+  pointer-events: none;
+  font-weight: bold;
+  color: #fff;
+}
+
+.skillbox.left {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  transition: 0.5s ease-in-out;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(to bottom right, red 50%, blue 50%);
+}
+
+.skillbox.right {
+  top: 0;
+  left: 50%;
+  width: 50%;
+  height: 100%;
+  background-color: transparent;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.skillbox.top {
+  width: 100%;
+  height: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 1s ease-in-out;
+  background-color: yellow;
+  color: #000;
+}
+
+.skillbox.bot {
+  top: 50%;
+  width: 100%;
+  height: 50%;
+  background-color: transparent;
+  display: flex;
+  transition: 1.5s ease-in-out;
+}
+
+.skillbox.bot .skillbox.left {
+  transition: 2s ease-in-out;
+  font-size: 13px;
+  background: green;
+  color: #fff;
+}
+
+.skillbox.bot .skillbox.right {
+  transition: 2.5s ease-in-out;
+  background-color: skyblue;
+  color: #fff;
 }
 
 /* Skills */
@@ -342,9 +442,18 @@ image-container {
   margin: 15px 1.5px 0 1.5px;
 }
 
+/* 1,4번 버튼 양 옆에 margin 없앰 */
+.projects-container .project-categories .category-btn:nth-child(1) {
+  margin: 15px 1.5px 0 0;
+}
+
+.projects-container .project-categories .category-btn:nth-child(4) {
+  margin: 15px 0 0 1.5px;
+}
+
 .category-btn.selected,
 .category-btn:hover {
-  transform: scaleY(1.3) translateY(-5px);
+  transform: scaleY(1.3) translateY(-4px);
 }
 
 .category-btn.selected::after,
@@ -444,8 +553,15 @@ image-container {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 30px 0;
+  margin: 0;
   width: 100%;
+}
+
+.projects-container .project-list .projects-list-wrap {
+  /* 임의로 맞춤.. */
+  width: 100%;
+  background-color: cadetblue;
+  padding: 20px;
 }
 
 .projects-container .project-list .project-title {
