--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
 
 body {
   font-family: "Montserrat", sans-serif;
+  overflow-x: hidden;
 }
 
 .section {
@@ -18,7 +19,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #f8f9fd;
+  background-color: #fff;
+  /* background-color: #f8f9fd; */
 }
 
 .section .wrap {
@@ -26,7 +28,7 @@ body {
   margin: 0;
   padding: 50px;
   max-width: 1300px;
-  background-color: #f8f9fd;
+  background-color: #fff;
 }
 
 .section h1 {
@@ -56,7 +58,8 @@ body {
 .home {
   width: 100%;
   height: 100vh;
-  background-color: #008080;
+  /* background-color: #008080; */
+  background-color: #9fbfff;
   color: #fff;
   display: flex;
   justify-content: center;
@@ -85,13 +88,6 @@ body {
   margin: 10px 0;
 }
 
-.home .home-wrap .fa-chevron-down {
-  font-size: 50px;
-  position: absolute;
-  bottom: 30px;
-  cursor: pointer;
-}
-
 .home .home-wrap .btn-start {
   border-top: 50px solid red;
   border-bottom: 50px solid none;
@@ -112,42 +108,45 @@ body {
 }
 
 /* home의 bottom image (main안에 있음)*/
-image-container {
+.main .home-bottom-container {
   position: absolute;
-  top: -250px;
+  top: -240px;
   left: 0;
   width: 100%;
   height: 250px;
+  z-index: -1;
 }
 
 .bottom-image {
   position: absolute;
-  top: -250px;
-  width: 250px;
-  height: 250px;
+  bottom: 0;
+  width: auto;
+  height: 80%;
 }
 
-.bottom-image.hand-left {
-  left: 150px;
-  visibility: hidden;
+.bottom-image.image-left {
+  left: -15%;
 }
 
-.bottom-image.hand-right {
-  right: 150px;
-  visibility: hidden;
+.bottom-image.image-right {
+  right: -10%;
+  transform: scaleX(-1);
 }
 
-.bottom-image.pen {
-  right: 150px;
-  width: 100px;
-  height: 100px;
-  z-index: 1;
-  transform: rotate(-65deg) translate(10px, -10px);
+.home-bottom-container .fa-chevron-down {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  font-size: 50px;
+  cursor: pointer;
+  transform: translateX(-50%);
+  color: #fff;
 }
 
-.bottom-image.man-sitting {
-  right: 50px;
-}
+/* .wrap {
+  background: no-repeat center url("icons/pablo-746_2.png");
+  background-size: 100% 110%;
+} */
 
 /* MAIN */
 /* max-height 추가해서 너무 작아지면 내용 없애버리기 */
@@ -160,18 +159,14 @@ image-container {
   position: relative;
 }
 
-/* .wrap {
-  background: no-repeat center url("icons/pablo-746_2.png");
-  background-size: 100% 110%;
-} */
-
 .main h1 {
   height: 10vh;
   margin-bottom: 0;
 }
 
 .main-container {
-  background-color: #e0ffff;
+  /* background-color: #e0ffff; */
+  background-color: lightblue;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -388,7 +383,7 @@ image-container {
   /* padding: 0 37.5%; */
 }
 
-.image-container .each-image img {
+.preview .preview-projects .image-container .each-image img {
   width: 100%;
   height: 100%;
   margin-top: 10%;
@@ -540,7 +535,6 @@ image-container {
   cursor: pointer;
   border: none;
   padding: 5px 20px;
-  background-color: cadetblue;
   font-size: 15px;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
@@ -560,6 +554,7 @@ image-container {
 
 .category-btn.selected,
 .category-btn:hover {
+  background-color: #00ced1;
   transform: scaleY(1.3) translateY(-4px);
 }
 
@@ -617,10 +612,11 @@ image-container {
   flex-wrap: wrap;
   justify-content: center;
   width: 100%;
-  background-color: cadetblue;
+  background-color: #00ced1;
   padding: 20px;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
+  transition: 0.3s ease;
 }
 
 .projects-container .project-list .project-title {
@@ -711,72 +707,78 @@ image-container {
 
 .contact-container {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  height: 500px;
-  margin: 30px;
+  width: 100%;
+  height: 400px;
+  margin: 20px 0;
   padding: 0;
 }
 
 .contact-container .contact-info {
   position: relative;
-  transform: rotate(-30deg);
-  transform-origin: right center;
-  transition: transform 1s ease-in-out;
-}
-
-.contact-container .contact-info:hover {
-  transform: rotate(0);
-  transform-origin: right center;
+  width: 450px;
+  height: 100%;
 }
 
 .contact-container .contact-info .info-wrap {
-  background-color: cornflowerblue;
-  display: flex;
-  width: 500px;
-  height: 300px;
-  border-radius: 10px;
-  margin-top: 30px;
-  position: relative;
-  padding: 15px;
-  z-index: 1;
-}
-
-.contact-container .card-image {
-  position: absolute;
-  top: 150px;
-  left: 10px;
-  width: 500px;
-  height: 358px;
-  transform: rotate(173deg);
-}
-
-.contact-container .contact-info h3 {
-  margin-right: auto;
-  position: absolute;
-  top: -30px;
-  left: 15px;
-}
-
-.contact-container .contact-info .info-left {
-  width: 45%;
-  height: 100%;
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
-}
-
-.contact-container .contact-info .info-right {
-  color: #fff;
-  font-size: 20px;
-  font-weight: bold;
+  background-color: transparent;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 50px;
+  width: 385px;
+  height: 285px;
+  border-radius: 10px;
+  margin-top: 85px;
+  margin-left: 52px;
+  position: relative;
+  z-index: 1;
+}
+
+.contact-info .info-wrap .info {
+  width: 100%;
+  height: 80px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  font-size: 30px;
+  margin-left: 20px;
+  color: #000;
+}
+
+.contact-info .info-wrap .info i,
+.contact-info .info-wrap .info .icon {
+  width: 30px;
+  text-align: center;
+}
+
+.contact-info .info-wrap .kktalk {
+  font-size: 30px;
+  margin-left: 20px;
+}
+
+.contact-info .info-wrap .info.email a,
+.contact-info .info-wrap .info.mobile p,
+.contact-info .info-wrap .kktalk p {
+  font-size: 20px;
+  font-weight: bold;
+  text-decoration: none;
+  letter-spacing: 1px;
+  width: 100%;
+  text-align: center;
+}
+
+.contact-container .contact-info h3 {
+  position: absolute;
+  top: -70px;
+  left: 200px;
+  text-transform: uppercase;
 }
 
 .contact-links {
-  background-color: #20b2aa;
+  background: no-repeat top url("icons/flamenco-247.png");
+  background-size: 150%;
+  background-color: #fff;
   width: 100%;
   height: 100%;
   font-size: 35px;
@@ -784,11 +786,75 @@ image-container {
   margin: 0;
   padding-top: 50px;
   padding-bottom: 10px;
+  position: relative;
+  z-index: 0;
+}
+
+.contact-links .contact-image-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+}
+
+.contact-image-container img {
+  position: absolute;
+  width: 13%;
+  height: auto;
+  bottom: 10px;
+  z-index: 1;
+}
+
+.contact-image-container .house1 {
+  bottom: 50px;
+  right: 12%;
+  max-width: 150px;
+  min-width: 50px;
+}
+
+.contact-image-container .house2 {
+  left: 2%;
+  max-width: 150px;
+  min-width: 50px;
+}
+
+.contact-image-container .house3 {
+  left: 12%;
+  max-width: 150px;
+  min-width: 50px;
+}
+
+.contact-image-container .house4 {
+  bottom: 5px;
+  right: 3%;
+  max-width: 150px;
+  min-width: 50px;
+}
+
+.contact-image-container .building {
+  bottom: 90px;
+  left: 50%;
+  transform: translateX(-50%) scaleX(-1);
+  width: 450px;
+  height: 500px;
+  z-index: 0;
+}
+
+.contact-links a {
+  color: #fff;
+  transition: 0.3s ease;
+  margin-right: 10px;
+}
+
+.contact-links a:hover {
+  color: green;
 }
 
 .contact-links p {
   font-size: 14px;
-  color: #333;
+  color: green;
 }
 
 /* arrow up button */
