--- a/style.css
+++ b/style.css
@@ -166,7 +166,7 @@ body {
 
 .main-container {
   /* background-color: #e0ffff; */
-  background-color: lightblue;
+  background-color: #8adaf5a8;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -245,7 +245,7 @@ body {
 .main-container .preview .preview-skills,
 .main-container .preview .preview-projects,
 .main-container .preview .preview-contacts {
-  background-color: #afeeee;
+  background-color: #c0fefca9;
   border: 1.5px solid #0d98ba;
   color: #0d98ba;
   border-radius: 2px;
@@ -457,7 +457,8 @@ body {
 }
 
 .skill-card {
-  background-color: #00ced1;
+  /* 00ced1 b0efeb 28b5b5 1597bb */
+  background-color: #1597bb91;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -554,7 +555,8 @@ body {
 
 .category-btn.selected,
 .category-btn:hover {
-  background-color: #00ced1;
+  /* 98ddca 8ec51794 */
+  background-color: #8ec51794;
   transform: scaleY(1.3) translateY(-4px);
 }
 
@@ -612,7 +614,7 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   width: 100%;
-  background-color: #00ced1;
+  background-color: #8ec51794;
   padding: 20px;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
@@ -808,8 +810,8 @@ body {
 }
 
 .contact-image-container .house1 {
-  bottom: 50px;
-  right: 12%;
+  bottom: 30px;
+  right: 10%;
   max-width: 150px;
   min-width: 50px;
 }
@@ -827,8 +829,8 @@ body {
 }
 
 .contact-image-container .house4 {
-  bottom: 5px;
-  right: 3%;
+  bottom: 0;
+  right: 5%;
   max-width: 150px;
   min-width: 50px;
 }
@@ -859,15 +861,14 @@ body {
 
 /* arrow up button */
 .arrow-up {
+  background-image: url("icons/clip-638.png");
   position: fixed;
-  bottom: 25px;
+  bottom: 80px;
   right: 25px;
   width: 50px;
   height: 50px;
-  font-size: 30px;
-  background-color: midnightblue;
-  color: pink;
-  border-radius: 50%;
+  border: none;
+  background-color: transparent;
   /* scroll 되었을 때만 보이게 
   그런데 display none을 하게되면 transition을 적용할 수 없다.
   그래서 여기서는 opactity를 0으로 해주자*/
@@ -875,6 +876,24 @@ body {
   transition: opacity 0.3s ease-in;
   pointer-events: none;
   cursor: pointer;
+}
+
+.arrow-up img {
+  width: 100%;
+}
+
+.arrow-up .flame {
+  width: 25%;
+  position: absolute;
+  top: 50px;
+  left: 21px;
+  opacity: 0;
+  transition: opacity 0.2s ease-in-out;
+}
+
+.arrow-up:hover .flame,
+.arrow-up.up .flame {
+  opacity: 1;
 }
 
 .arrow-up.visible {
