--- a/style.css
+++ b/style.css
@@ -123,6 +123,7 @@ body {
 }
 
 .home .home-image-container {
+  display: none;
   position: absolute;
   top: 0;
   left: 0;
@@ -181,9 +182,8 @@ body {
 
 .bottom-image {
   position: absolute;
-  bottom: 0;
-  width: auto;
-  height: 80%;
+  bottom: -5%;
+  width: 63%;
 }
 
 .bottom-image.image-left {
@@ -201,8 +201,8 @@ body {
   left: 50%;
   font-size: 50px;
   cursor: pointer;
-  transform: translateX(-50%);
-  color: #fff;
+  transform: translateX(-100%);
+  color: #ccc;
 }
 
 /* .wrap {
@@ -222,7 +222,7 @@ body {
 }
 
 .main h1 {
-  height: 10vh;
+  height: 5vh;
   margin-bottom: 0;
 }
 
@@ -234,7 +234,8 @@ body {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 80vh;
+  height: 85vh;
+  margin-top: 20px;
   padding: 6px 3px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
 }
@@ -365,7 +366,8 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
-  transition: 0.5s ease-in-out;
+  transition-delay: 0.2s;
+  /* transition: 0.5s ease-in-out; */
   justify-content: center;
   align-items: center;
   color: #000;
@@ -395,7 +397,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: 1s ease-in-out;
+  transition-delay: 0.4s;
+  /* transition: 1s ease-in-out; */
   background-color: yellow;
   color: #000;
 }
@@ -406,18 +409,21 @@ body {
   height: 50%;
   background-color: transparent;
   display: flex;
-  transition: 1.5s ease-in-out;
+  transition-delay: 0.6s;
+  /* transition: 1.5s ease-in-out; */
 }
 
 .skillbox.bot .skillbox.left {
-  transition: 2s ease-in-out;
+  transition-delay: 0.8s;
+  /* transition: 2s ease-in-out; */
   font-size: 13px;
   background: green;
   color: #fff;
 }
 
 .skillbox.bot .skillbox.right {
-  transition: 2.5s ease-in-out;
+  transition-delay: 1s;
+  /* transition: 2.5s ease-in-out; */
   background-color: skyblue;
   color: #fff;
 }
