--- a/style.css
+++ b/style.css
@@ -234,7 +234,7 @@ body {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 85vh;
+  height: 80vh;
   margin-top: 20px;
   padding: 6px 3px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
@@ -246,19 +246,21 @@ body {
   align-items: center;
   width: 100%;
   height: 70%;
-  padding: 50px 50px;
+  padding: 30px 30px;
 }
 
 .main-container .details .details-wrap {
   display: flex;
+  justify-content: center;
   flex-direction: column;
-  justify-content: space-between;
+  width: 40%;
   height: 100%;
-  max-width: 500px;
+  margin-right: 15px;
 }
 
-.main .main-container .details h3 {
-  margin-bottom: 10px;
+.main-container .details .details-wrap img {
+  width: 50%;
+  margin-bottom: 20px;
 }
 
 .main .main-container .details .my-info li {
@@ -267,12 +269,19 @@ body {
   letter-spacing: 1px;
 }
 
-.my-info li p {
-  line-height: 25px;
+.main-container .details .details-description-wrap {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+  width: 60%;
+  height: 100%;
+  margin-left: 15px;
 }
 
-.main .main-container .details p {
-  margin-bottom: 10px;
+.main-container .details .details-description-wrap .my-description {
+  margin-bottom: 5%;
+  line-height: 200%;
 }
 
 .main .main-container .details .btn-resume {
@@ -977,4 +986,85 @@ body {
   /* display: block; */
   opacity: 1;
   pointer-events: auto;
+}
+
+@media (max-width: 800px) {
+  .main-container {
+    justify-content: space-between;
+  }
+
+  .main .main-container .details {
+    flex-direction: column;
+    height: 95%;
+    padding: 30px 30px;
+  }
+
+  .main-container .details .details-wrap {
+    flex-direction: row;
+    width: 100%;
+    height: 40%;
+    justify-content: space-around;
+    margin-bottom: 20px;
+  }
+
+  .main-container .details .details-wrap .my-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .main-container .details .details-wrap img {
+    width: 20%;
+    height: auto;
+  }
+
+  .main-container .details .details-description-wrap {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-end;
+    width: 100%;
+  }
+
+  .main .main-container .preview {
+    display: flex;
+    width: 100%;
+    height: 5%;
+    margin-top: 6px;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .skillbox {
+    display: none;
+  }
+
+  .skillbox.left,
+  .skillbox.right,
+  .skillbox.top,
+  .skillbox.bot {
+    display: none;
+  }
+
+  .main-container .preview .preview-skills:hover .this,
+  .main-container .preview .preview-projects:hover .this,
+  .main-container .preview .preview-contacts:hover .this {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
+  .preview-projects:hover .image-container,
+  .preview-projects:hover .image-container .each-image {
+    display: none;
+  }
+
+  .main-container .preview .preview-projects:hover .buttons-container {
+    display: none;
+  }
+
+  .preview-contacts:hover .icons,
+  .preview-contacts:hover .contents {
+    display: none;
+  }
 }
