--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ body {
 }
 
 .home .home-wrap {
-  height: 100vh;
+  width: 100%;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -119,7 +119,8 @@ body {
 }
 
 .home .home-wrap .line {
-  width: 300px;
+  width: 0;
+  transition: 0.7s linear;
 }
 
 .home .home-image-container {
@@ -195,14 +196,29 @@ body {
   transform: scaleX(-1);
 }
 
-.home-bottom-container .fa-chevron-down {
+.home-bottom-container .dots {
   position: absolute;
-  bottom: 20px;
+  bottom: 0;
   left: 50%;
-  font-size: 50px;
+  width: 40px;
+  height: auto;
+  opacity: 0.7;
+  transform: translateX(-120%) scaleY(-1) rotate(45deg);
+}
+
+.home-bottom-container .down {
+  position: absolute;
+  bottom: 35px;
+  left: 50%;
+  width: 40px;
+  height: auto;
   cursor: pointer;
-  transform: translateX(-100%);
-  color: #ccc;
+  transform: translate(-110%, -10%);
+  transition: 1s ease-in-out;
+}
+
+.home-bottom-container .down:hover {
+  transform: translate(-80%, 20%) rotate(120deg);
 }
 
 /* .wrap {
@@ -516,7 +532,7 @@ body {
 }
 
 .preview-contacts .contents {
-  width: 80%;
+  width: 100%;
   align-items: flex-end;
   word-break: break-all;
   font-size: 18px;
@@ -532,7 +548,22 @@ body {
 }
 
 /* Skills */
+.skills {
+  position: relative;
+  z-index: -1;
+}
+
+.skills .airplane {
+  position: absolute;
+  top: 0;
+  left: -50%;
+  width: 1500px;
+  height: auto;
+  z-index: 0;
+}
+
 .skills p {
+  display: none;
   margin-bottom: 20px;
 }
 
@@ -557,6 +588,7 @@ body {
   font-size: 20px;
   cursor: pointer;
   overflow: hidden;
+  z-index: 1;
 }
 
 .skill-card i {
@@ -949,8 +981,8 @@ body {
 .arrow-up {
   background-image: url("icons/clip-638.png");
   position: fixed;
-  bottom: 80px;
-  right: 25px;
+  bottom: 55px;
+  right: 15px;
   width: 50px;
   height: 50px;
   border: none;
@@ -965,13 +997,14 @@ body {
 }
 
 .arrow-up img {
-  width: 100%;
+  width: 80%;
+  transform: rotate(5deg);
 }
 
 .arrow-up .flame {
-  width: 25%;
+  width: 23%;
   position: absolute;
-  top: 50px;
+  top: 37px;
   left: 21px;
   opacity: 0;
   transition: opacity 0.2s ease-in-out;
