--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body {
   margin: 10px 0;
 }
 
-.main,
+/* .main,
 .main .wrap {
   background: linear-gradient(#fff, #eee);
 }
@@ -53,9 +53,10 @@ body {
 .projects .wrap {
   background: linear-gradient(#ddd, #ccc);
 }
+ */
 .contact,
 .contact .wrap {
-  background: linear-gradient(#ccc, #aaa);
+  background: linear-gradient(#fff, #dbe6fd);
 }
 
 /* HOME */
@@ -257,8 +258,8 @@ body {
 }
 
 .main-container {
-  /* background-color: #e0ffff; */
-  background-color: #8adaf5a8;
+  /* background-color: #e0ffff 8adaf5a8 9fbfff; */
+  background-color: #dbe6fd;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -347,9 +348,11 @@ body {
 .main-container .preview .preview-skills,
 .main-container .preview .preview-projects,
 .main-container .preview .preview-contacts {
-  background-color: #c0fefca9;
+  /* background-color: #c0fefca9 dbe6fd 9fbfff deedf0; */
+  background-color: #deedf0;
   border: 1.5px solid #0d98ba;
-  color: #0d98ba;
+  color: #333;
+  font-weight: bold;
   border-radius: 2px;
   display: flex;
   justify-content: center;
@@ -410,7 +413,11 @@ body {
   justify-content: center;
   align-items: center;
   color: #000;
-  background: linear-gradient(160deg, orangered 50%, royalblue 50%);
+  background: linear-gradient(
+    160deg,
+    rgba(255, 68, 0, 0.8) 50%,
+    rgba(65, 105, 225, 0.8) 50%
+  );
 }
 
 .skillbox.left i {
@@ -438,7 +445,7 @@ body {
   align-items: center;
   transition-delay: 0.4s;
   /* transition: 1s ease-in-out; */
-  background-color: yellow;
+  background-color: rgba(255, 255, 0, 0.6);
   color: #000;
 }
 
@@ -456,14 +463,14 @@ body {
   transition-delay: 0.8s;
   /* transition: 2s ease-in-out; */
   font-size: 13px;
-  background: green;
+  background: rgba(0, 128, 0, 0.8);
   color: #fff;
 }
 
 .skillbox.bot .skillbox.right {
   transition-delay: 1s;
   /* transition: 2.5s ease-in-out; */
-  background-color: skyblue;
+  background-color: rgba(135, 207, 235, 0.8);
   color: #fff;
 }
 
@@ -586,8 +593,8 @@ body {
 }
 
 .skill-card {
-  /* 00ced1 b0efeb 28b5b5 1597bb */
-  background-color: #1597bb91;
+  /* 00ced1 b0efeb 28b5b5 1597bb 1597bb91 9fbfff*/
+  background-color: #dbe6fd;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -600,7 +607,6 @@ body {
   font-size: 20px;
   cursor: pointer;
   overflow: hidden;
-  z-index: 1;
 }
 
 .skill-card i {
@@ -685,8 +691,8 @@ body {
 
 .category-btn.selected,
 .category-btn:hover {
-  /* 98ddca 8ec51794 */
-  background-color: #8ec51794;
+  /* 98ddca 8ec51794 9fbfff dbe6fd*/
+  background-color: #dbe6fd;
   transform: scaleY(1.3) translateY(-4px);
 }
 
@@ -736,6 +742,7 @@ body {
 .projects-container .project-list {
   margin: 0;
   width: 100%;
+  transition: all 0.5s ease;
 }
 
 .projects-container .project-list .projects-list-wrap {
@@ -744,11 +751,11 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   width: 100%;
-  background-color: #8ec51794;
+  background-color: #dbe6fd;
   padding: 20px;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
-  transition: 0.3s ease;
+  transition: all 0.5s ease;
 }
 
 .projects-container .project-list .project-title {
@@ -769,6 +776,10 @@ body {
 
 .projects-container .project-list .project-result.invisible {
   display: none;
+}
+
+.projects-container .project-list .project-result.anim-out {
+  opacity: 0;
 }
 
 .project-result .design-result {
@@ -909,7 +920,8 @@ body {
 .contact-links {
   background: no-repeat top url("icons/flamenco-247.png");
   background-size: 150%;
-  background-color: #aaa;
+  /* background-color: #aaa; deedf0*/
+  background-color: #dbe6fd;
   width: 100%;
   height: 100%;
   font-size: 35px;
