--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
 }
 
 .section {
+  background-color: #fff;
   margin: 0;
   display: flex;
   justify-content: center;
@@ -26,7 +27,7 @@ body {
   margin: 0;
   padding: 50px;
   max-width: 1300px;
-  background-color: #fff;
+  background-color: transparent;
 }
 
 .section h1 {
@@ -54,10 +55,10 @@ body {
   background: linear-gradient(#ddd, #ccc);
 }
  */
-.contact,
+/* .contact,
 .contact .wrap {
   background: linear-gradient(#fff, #dbe6fd);
-}
+} */
 
 /* HOME */
 .section.home {
@@ -317,10 +318,10 @@ body {
 
 .main .main-container .details .btn-resume {
   background-color: #fff;
-  color: #0d98ba;
+  color: #9fbfff;
   width: 120px;
   height: 40px;
-  border: 2px solid #0d98ba;
+  border: 2px solid #9fbfff;
   border-radius: 1px;
   font-size: 15px;
   font-weight: bold;
@@ -331,7 +332,7 @@ body {
 }
 
 .main .main-container .details .btn-resume:hover {
-  background-color: #0d98ba;
+  background-color: #9fbfff;
   color: #fff;
 }
 
@@ -720,7 +721,7 @@ body {
   right: 21px;
   width: 20px;
   height: 20px;
-  background-color: aquamarine;
+  background-color: #9fbfff;
   color: #555;
 }
 
@@ -917,11 +918,10 @@ body {
   text-transform: uppercase;
 }
 
-.contact-links {
+.contact-links .wrap {
   background: no-repeat top url("icons/flamenco-247.png");
-  background-size: 150%;
+  background-size: 100%;
   /* background-color: #aaa; deedf0*/
-  background-color: #dbe6fd;
   width: 100%;
   height: 100%;
   font-size: 35px;
@@ -931,6 +931,7 @@ body {
   padding-bottom: 10px;
   position: relative;
   z-index: 0;
+  min-width: 880px;
 }
 
 .contact-links .contact-image-container {
@@ -952,26 +953,19 @@ body {
 
 .contact-image-container .house1 {
   bottom: 30px;
-  right: 10%;
+  right: 12%;
   max-width: 150px;
   min-width: 50px;
 }
 
 .contact-image-container .house2 {
-  left: 2%;
+  left: 8%;
   max-width: 150px;
   min-width: 50px;
 }
 
 .contact-image-container .house3 {
-  left: 12%;
-  max-width: 150px;
-  min-width: 50px;
-}
-
-.contact-image-container .house4 {
-  bottom: 0;
-  right: 5%;
+  left: 18%;
   max-width: 150px;
   min-width: 50px;
 }
@@ -989,6 +983,7 @@ body {
   color: #fff;
   transition: 0.3s ease;
   margin-right: 10px;
+  text-decoration: none;
 }
 
 .contact-links a:hover {
@@ -997,7 +992,7 @@ body {
 
 .contact-links p {
   font-size: 14px;
-  color: green;
+  color: #fff;
 }
 
 /* arrow up button */
