--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: background-color 1s ease;
 }
 
 .section .wrap {
@@ -75,8 +76,10 @@ body {
 .home {
   width: 100%;
   height: 100vh;
-  /* background-color: #008080; */
-  background-color: #9fbfff;
+  /* background-color: #9fbfff; */
+  background: linear-gradient(-45deg, #9fbfff, #00008b, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
   color: #fff;
   display: flex;
   justify-content: center;
@@ -84,6 +87,18 @@ body {
   position: fixed;
   inset: 0px;
   z-index: -100;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 .home .home-wrap {
@@ -95,6 +110,7 @@ body {
   align-items: center;
   position: relative;
   background-attachment: fixed;
+  z-index: 1;
 }
 
 .home .home-wrap h1 {
@@ -239,11 +255,6 @@ body {
   transform: translate(-60%, 20%) rotate(120deg);
 }
 
-/* .wrap {
-  background: no-repeat center url("icons/pablo-746_2.png");
-  background-size: 100% 110%;
-} */
-
 /* MAIN */
 /* max-height 추가해서 너무 작아지면 내용 없애버리기 */
 .main {
@@ -291,6 +302,7 @@ body {
   width: 40%;
   height: 100%;
   margin-right: 15px;
+  margin-left: 50px;
 }
 
 .main-container .details .details-wrap img {
@@ -313,6 +325,7 @@ body {
   width: 60%;
   height: 100%;
   margin-left: 15px;
+  margin-right: 50px;
 }
 
 .main-container .details .details-description-wrap .my-description {
@@ -343,8 +356,7 @@ body {
 .main .main-container .preview {
   display: flex;
   width: 100%;
-  height: 30%;
-  /* 작아지면 height 30?으로 바꾸기?? */
+  height: 40%;
   margin-top: 6px;
   justify-content: center;
   align-items: center;
@@ -583,6 +595,7 @@ body {
 /* Skills */
 .skills {
   position: relative;
+  background-color: #333;
 }
 
 .skills p {
